--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
-  "trailingComma": "es5",
+  "endOfLine": "auto",
+  "trailingComma": "all",
   "tabWidth": 2,
-  "semi": false,
   "singleQuote": true
 }
