Add rprepush:fix command script to package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "format:check": "prettier --check src/**/*.{js,ts,tsx}",
+    "format": "prettier --write src/**/*.{js,ts,tsx}",
     "lint:check": "eslint . --ext .ts,.tsx",
-    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint .  --ext .ts,.tsx --fix",
+    "tsc": "tsc --project tsconfig.json",
+    "prepush": "npm run format:check && npm run tsc && npm run lint:check",
+    "prepush:fix": "npm run format && npm run tsc && npm run lint",
     "prettier": "npx prettier --write .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
