--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
     "jsx": "react-jsx",
     "lib": ["dom", "esnext", "dom.iterable"],
     "module": "esnext",
+    "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
     "target": "esnext",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["./packages", "*.d.ts"],
+  "include": ["./src", "*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
