Fix npm commands to yarn

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint:check": "eslint . --ext .ts,.tsx",
     "lint": "eslint .  --ext .ts,.tsx --fix",
     "tsc": "tsc --project tsconfig.json",
-    "prepush": "npm run format:check && npm run tsc && npm run lint:check",
-    "prepush:fix": "npm run format && npm run tsc && npm run lint",
+    "prepush": "yarn run format:check && yarn run tsc && yarn run lint:check",
+    "prepush:fix": "yarn run format && yarn run tsc && yarn run lint",
     "prettier": "npx prettier --write .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
